--- a/kappak.sty
+++ b/kappak.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{kappak-v4}[2013/05/01 kappak]
+\ProvidesPackage{kappak}[2013/05/01 kappak]
 \makeatletter
 
 %% ----------------------------------------
