Cleaning stuff up

--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -64,6 +64,10 @@
 	\def\@usedVersion{0409}
 }
 
+\DeclareOption{cortana}{
+	\def\@usedVersion{0410}
+}
+
 %% --------------------
 %% Simple
 %% --------------------
@@ -244,8 +248,8 @@
 	
 	\hypersetup{ % Thanks timmurphy.org
 	    colorlinks=true,
-	    linkcolor=blue ,
-	    urlcolor=red   ,
+	    linkcolor=blue,
+	    urlcolor=red,
 	    linktoc=all
 	}
 }{}
