--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -271,13 +271,28 @@
 }{}
 
 \ifthenelse{\boolean{@b_extpack_use_beamer}}{}{
+	
 	\ifthenelse{\equal{\@headerFooterStyle}{normal}}{}{
 		\RequirePackage{fancyhdr}
 	}
-	\ifthenelse{\equal{\@chapterStyle}{normal}}{}{
-		\RequirePackage{titlesec}
+
+	\ifthenelse{
+		\equal{\@chapterStyle}{Sonny} 		\or 
+		\equal{\@chapterStyle}{Lenny} 		\or 
+		\equal{\@chapterStyle}{Glenn} 		\or 
+		\equal{\@chapterStyle}{Conny} 		\or 
+		\equal{\@chapterStyle}{Rejne} 		\or 
+		\equal{\@chapterStyle}{Bjarne}		\or 
+		\equal{\@chapterStyle}{Bjornstrup}
+	}{
+		\usepackage[\@chapterStyle]{fncychap}
+	}{
+		\ifthenelse{\equal{\@chapterStyle}{normal}}{}{
+			\RequirePackage{titlesec}
+		}
 	}
-}
+
+} % \ifthenelse{\boolean{@b_extpack_use_beamer}}{}{
 
 \ifthenelse{\equal{\@fontSet}{alternate}}{
 	\RequirePackage{mathptmx}       % selects Times Roman as basic font
