[Fix] char operator

--- a/kappak-maths.tex
+++ b/kappak-maths.tex
@@ -9,7 +9,7 @@
 	\DeclareMathOperator{\Ann}		{Ann}
 	\DeclareMathOperator{\Aut}		{Aut}
 	\DeclareMathOperator{\Bil}		{Bil}
-	\DeclareMathOperator{\car}		{car}
+	\DeclareMathOperator{\car}		{char}
 	\DeclareMathOperator{\card}		{card}
 	\DeclareMathOperator{\Card}		{Card}
 	\DeclareMathOperator{\codom}	{codom}
