Non printable chars handling in misc

--- a/kappak.sty
+++ b/kappak.sty
@@ -140,6 +140,9 @@
 
 	\newcommand{\tb}{\textbullet}
 
+	% Prevents annoying errors upon non printable chars
+	\DeclareUnicodeCharacter{00A0}{ }
+
 }{} % \ifthenelse{\boolean{@b_use_misc}}{
 
 %% ----------------------------------------
