Removed minipage in title page styles to allow better footnotes

--- a/kappak-styles.tex
+++ b/kappak-styles.tex
@@ -103,11 +103,9 @@
 			\begin{center}
 				\logohere{centeredFigure} ~ \\ [2cm]
 				\huge{\textsc{\@title}} \\ [1.5cm]		
-				\begin{minipage}{0.8 \textwidth}
-					\begin{center} \large
-						\authorshere
-					\end{center}
-				\end{minipage} \\ [0.25cm]
+				\begin{center} \large
+					\authorshere \\ [0.25cm]
+				\end{center}
 				{\large \@date} \\ [4cm]
 				\imagehere{centeredFigure}
 				\vfill
@@ -129,11 +127,9 @@
 				\rule{\linewidth}{0.5mm} \\ [0.4cm]
 				\huge{\bfseries{\@title}} \\
 				\rule{\linewidth}{0.5mm} \\ [1cm]			
-				\begin{minipage}{0.8 \textwidth}
-					\begin{center}
-						{\large \authorshere}
-					\end{center}
-				\end{minipage}
+				\begin{center}
+					{\large \authorshere}
+				\end{center}
 				\vfill 
 				\imagehere{centeredFigure}
 				\vfill
