Added operators Tor and Ext

--- a/kappak-maths.tex
+++ b/kappak-maths.tex
@@ -42,6 +42,7 @@
 	\DeclareMathOperator{\dom}		{dom}
 	\DeclareMathOperator{\Dom}		{Dom}
 	\DeclareMathOperator{\End}		{End}
+	\DeclareMathOperator{\Ext}		{Ext}
 	\DeclareMathOperator{\ev}		{ev}
 	\DeclareMathOperator{\Frac}		{Frac}
 	\DeclareMathOperator{\GL}		{GL}
@@ -62,6 +63,7 @@
 	\DeclareMathOperator{\Stab}		{Stab}
 	\DeclareMathOperator{\Spec}		{Spec}
 	\DeclareMathOperator{\Sym}		{Sym}
+	\DeclareMathOperator{\Tor}		{Tor}
 	\DeclareMathOperator{\tr}		{tr}
 	
 }{} % \ifthenelse{\boolean{@b_maths_use_operators}}{
