--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -172,10 +172,10 @@
 				{}#1 \& {}#2 \\
 				{}#3 \& {}#4 \\
 			};
-			\path [>=stealth, \@tDiagSqUA] (m-1-1) edge [\@tDiagSqUL] node [above] {$#5$} (m-1-2);
-			\path [>=stealth, \@tDiagSqLA] (m-1-1) edge [\@tDiagSqLL] node [left]  {$#6$} (m-2-1);
-			\path [>=stealth, \@tDiagSqRA] (m-1-2) edge [\@tDiagSqRL] node [right] {$#7$} (m-2-2);
-			\path [>=stealth, \@tDiagSqDA] (m-2-1) edge [\@tDiagSqDL] node [above] {$#8$} (m-2-2);
+			\path [\@tDiagSqUA] (m-1-1) edge [\@tDiagSqUL] node [above] {$#5$} (m-1-2);
+			\path [\@tDiagSqLA] (m-1-1) edge [\@tDiagSqLL] node [left]  {$#6$} (m-2-1);
+			\path [\@tDiagSqRA] (m-1-2) edge [\@tDiagSqRL] node [right] {$#7$} (m-2-2);
+			\path [\@tDiagSqDA] (m-2-1) edge [\@tDiagSqDL] node [above] {$#8$} (m-2-2);
 		\end{tikzpicture}
 	}
 	
@@ -195,10 +195,10 @@
 				{}#3 \& {}#4 \\
 			};
 			\path (m-1-1) edge [-, draw = white] node [inline] {\mbox{\LARGE{$\ulcorner$}}} (m-2-2);
-			\path [>=stealth, \@tDiagSqUA] (m-1-1) edge [\@tDiagSqUL] node [above] {$#5$} (m-1-2);
-			\path [>=stealth, \@tDiagSqLA] (m-1-1) edge [\@tDiagSqLL] node [left]  {$#6$} (m-2-1);
-			\path [>=stealth, \@tDiagSqRA] (m-1-2) edge [\@tDiagSqRL] node [right] {$#7$} (m-2-2);
-			\path [>=stealth, \@tDiagSqDA] (m-2-1) edge [\@tDiagSqDL] node [above] {$#8$} (m-2-2);
+			\path [\@tDiagSqUA] (m-1-1) edge [\@tDiagSqUL] node [above] {$#5$} (m-1-2);
+			\path [\@tDiagSqLA] (m-1-1) edge [\@tDiagSqLL] node [left]  {$#6$} (m-2-1);
+			\path [\@tDiagSqRA] (m-1-2) edge [\@tDiagSqRL] node [right] {$#7$} (m-2-2);
+			\path [\@tDiagSqDA] (m-2-1) edge [\@tDiagSqDL] node [above] {$#8$} (m-2-2);
 		\end{tikzpicture}
 	}
 	
@@ -218,10 +218,10 @@
 				{}#3 \& {}#4 \\
 			};
 			\path (m-1-1) edge [-, draw = white] node [inline] {\mbox{\LARGE{$\lrcorner$}}} (m-2-2);
-			\path [>=stealth, \@tDiagSqUA] (m-1-1) edge [\@tDiagSqUL] node [above] {$#5$} (m-1-2);
-			\path [>=stealth, \@tDiagSqLA] (m-1-1) edge [\@tDiagSqLL] node [left]  {$#6$} (m-2-1);
-			\path [>=stealth, \@tDiagSqRA] (m-1-2) edge [\@tDiagSqRL] node [right] {$#7$} (m-2-2);
-			\path [>=stealth, \@tDiagSqDA] (m-2-1) edge [\@tDiagSqDL] node [above] {$#8$} (m-2-2);
+			\path [\@tDiagSqUA] (m-1-1) edge [\@tDiagSqUL] node [above] {$#5$} (m-1-2);
+			\path [\@tDiagSqLA] (m-1-1) edge [\@tDiagSqLL] node [left]  {$#6$} (m-2-1);
+			\path [\@tDiagSqRA] (m-1-2) edge [\@tDiagSqRL] node [right] {$#7$} (m-2-2);
+			\path [\@tDiagSqDA] (m-2-1) edge [\@tDiagSqDL] node [above] {$#8$} (m-2-2);
 		\end{tikzpicture}
 	}
 
@@ -312,9 +312,9 @@
 				{}#1 \& {}#2 \\
 				{}#3 \& \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]       {$#4$} (m-1-2);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [left]        {$#5$} (m-2-1);
-			\path [>=stealth, \@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-1-2);
+			\path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]       {$#4$} (m-1-2);
+			\path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [left]        {$#5$} (m-2-1);
+			\path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-1-2);
 		\end{tikzpicture}\rds
 	}
 	
@@ -333,9 +333,9 @@
 				{}#1 \& {}#2 \\
 				\& {}#3 \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]      {$#4$} (m-1-2);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [below left] {$#5$} (m-2-2);
-			\path [>=stealth, \@tDiagTrigCA] (m-1-2) edge [\@tDiagTrigCL] node [right]      {$#6$} (m-2-2);
+			\path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]      {$#4$} (m-1-2);
+			\path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [below left] {$#5$} (m-2-2);
+			\path [\@tDiagTrigCA] (m-1-2) edge [\@tDiagTrigCL] node [right]      {$#6$} (m-2-2);
 		\end{tikzpicture}
 	}
 	
@@ -354,9 +354,9 @@
 				{}#1 \& \\
 				{}#2 \& {}#3 \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [left]        {$#4$} (m-2-1);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-2);
-			\path [>=stealth, \@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]       {$#6$} (m-2-2);
+			\path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [left]        {$#4$} (m-2-1);
+			\path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-2);
+			\path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]       {$#6$} (m-2-2);
 		\end{tikzpicture}
 	}
 	
@@ -375,9 +375,9 @@
 				\& {}#1 \\
 				{}#2 \& {}#3 \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-2-1) edge [\@tDiagTrigAL] node [above left] {$#4$} (m-1-2);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-2) edge [\@tDiagTrigBL] node [right]      {$#5$} (m-2-2);
-			\path [>=stealth, \@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]      {$#6$} (m-2-2);
+			\path [\@tDiagTrigAA] (m-2-1) edge [\@tDiagTrigAL] node [above left] {$#4$} (m-1-2);
+			\path [\@tDiagTrigBA] (m-1-2) edge [\@tDiagTrigBL] node [right]      {$#5$} (m-2-2);
+			\path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]      {$#6$} (m-2-2);
 		\end{tikzpicture}
 	}
 		
@@ -396,9 +396,9 @@
 				\& {}#1 \& \\
 				{}#2 \& \& {}#3 \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-1-2) edge [\@tDiagTrigAL] node [above left]  {$#4$} (m-2-1);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-2) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-3);
-			\path [>=stealth, \@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]       {$#6$} (m-2-3);
+			\path [\@tDiagTrigAA] (m-1-2) edge [\@tDiagTrigAL] node [above left]  {$#4$} (m-2-1);
+			\path [\@tDiagTrigBA] (m-1-2) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-3);
+			\path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]       {$#6$} (m-2-3);
 		\end{tikzpicture}
 	}
 	
@@ -417,9 +417,9 @@
 				{}#2 \& \\
 				\& {}#3 \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-2-1) edge [\@tDiagTrigAL] node [above left] {$#4$} (m-1-2);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-2) edge [\@tDiagTrigBL] node [right]      {$#5$} (m-3-2);
-			\path [>=stealth, \@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [below left] {$#6$} (m-3-2);
+			\path [\@tDiagTrigAA] (m-2-1) edge [\@tDiagTrigAL] node [above left] {$#4$} (m-1-2);
+			\path [\@tDiagTrigBA] (m-1-2) edge [\@tDiagTrigBL] node [right]      {$#5$} (m-3-2);
+			\path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [below left] {$#6$} (m-3-2);
 		\end{tikzpicture}
 	}
 		
@@ -439,9 +439,9 @@
 				\& {}#2 \\
 				{}#3 \& \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [left]        {$#4$} (m-3-1);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-2);
-			\path [>=stealth, \@tDiagTrigCA] (m-3-1) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-2-2);
+			\path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [left]        {$#4$} (m-3-1);
+			\path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-2);
+			\path [\@tDiagTrigCA] (m-3-1) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-2-2);
 		\end{tikzpicture}
 	}
 	
@@ -460,9 +460,9 @@
 				{}#1 \& \& {}#2 \\
 				\& {}#3 \& \\
 			};
-			\path [>=stealth, \@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]       {$#4$} (m-1-3);
-			\path [>=stealth, \@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [below left]  {$#5$} (m-2-2);
-			\path [>=stealth, \@tDiagTrigCA] (m-1-3) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-2-2);
+			\path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]       {$#4$} (m-1-3);
+			\path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [below left]  {$#5$} (m-2-2);
+			\path [\@tDiagTrigCA] (m-1-3) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-2-2);
 		\end{tikzpicture}
 	}
 	
