Removed colors on hyperref links

--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -264,10 +264,9 @@
 \RequirePackage{multicol}
 \RequirePackage{subfig}
 
-\hypersetup{ % Thanks timmurphy.org
+\hypersetup{ % See https://en.wikibooks.org/wiki/LaTeX/Hyperlinks#Customization
     colorlinks=true,
-    linkcolor=blue,
-    urlcolor=red,
+    hidelinks,
     linktoc=all
 }
 
