Added mathtools inclusion

--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -255,6 +255,7 @@
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
 \RequirePackage{amsthm}
+\RequirePackage{mathtools}
 
 \RequirePackage{color}
 \RequirePackage{enumerate}
