[Fixed] Unwanted behavior for certain tikz diagram commands

--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -315,7 +315,7 @@
 			\path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [above]       {$#4$} (m-1-2);
 			\path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [left]        {$#5$} (m-2-1);
 			\path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [below right] {$#6$} (m-1-2);
-		\end{tikzpicture}\rds
+		\end{tikzpicture}
 	}
 	
 %% --------------------
