Added category `Ch`

--- a/kappak-maths.tex
+++ b/kappak-maths.tex
@@ -92,24 +92,25 @@
 %% Some categories
 %% --------------------
     
-    \newcategory{\Ab}        {}{A}{b}
-    \newcategory{\Alg}        {}{A}{lg}
-    \newcategory{\Cat}        {}{C}{at}
-    \newcategory{\CAT}        {}{C}{AT}
-    \newcategory{\Fin}        {}{F}{in}
-    \newcategory{\Graph}    {}{G}{raph}
-    \newcategory{\Grp}        {}{G}{rp}
-    \newcategory{\Mod}        {}{M}{od}
-    \newcategory{\Mon}        {}{M}{on}
-    \newcategory{\Op}        {}{O}{p}
-    \newcategory{\Pos}        {}{P}{os}
-    \newcategory{\Ring}        {}{R}{ing}
-    \newcategory{\Set}        {}{S}{et}
-    \newcategory{\SET}        {}{S}{ET}
-    \newcategory{\Sh}        {}{S}{h}
-    \newcategory{\sSet}        {s}{S}{et}
-    \newcategory{\Top}        {}{T}{op}
-    \newcategory{\Vect}        {}{V}{ect}
+    \newcategory{\Ab}    {}{A}{b}
+    \newcategory{\Alg}   {}{A}{lg}
+    \newcategory{\Cat}   {}{C}{at}
+    \newcategory{\CAT}   {}{C}{AT}
+    \newcategory{\Ch}    {}{C}{h}
+    \newcategory{\Fin}   {}{F}{in}
+    \newcategory{\Graph} {}{G}{raph}
+    \newcategory{\Grp}   {}{G}{rp}
+    \newcategory{\Mod}   {}{M}{od}
+    \newcategory{\Mon}   {}{M}{on}
+    \newcategory{\Op}    {}{O}{p}
+    \newcategory{\Pos}   {}{P}{os}
+    \newcategory{\Ring}  {}{R}{ing}
+    \newcategory{\Set}   {}{S}{et}
+    \newcategory{\SET}   {}{S}{ET}
+    \newcategory{\Sh}    {}{S}{h}
+    \newcategory{\sSet}  {s}{S}{et}
+    \newcategory{\Top}   {}{T}{op}
+    \newcategory{\Vect}  {}{V}{ect}
     
 %% --------------------
 %% cat style
