--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -356,7 +356,7 @@
             };
             \path [\@tDiagTrigAA] (m-1-1) edge [\@tDiagTrigAL] node [left]        {$#4$} (m-2-1);
             \path [\@tDiagTrigBA] (m-1-1) edge [\@tDiagTrigBL] node [above right] {$#5$} (m-2-2);
-            \path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [above]       {$#6$} (m-2-2);
+            \path [\@tDiagTrigCA] (m-2-1) edge [\@tDiagTrigCL] node [below]       {$#6$} (m-2-2);
         \end{tikzpicture}
     }
     
