--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -273,7 +273,7 @@
 
 \newcommand{\@bb}{\mathbb}
 \ifthenelse{\equal{\@bbStyle}{bbold}}{
-    \RequirePackage[bbgreek1]{bbold}
+    \RequirePackage{bbold}
     \setboolean{@b_maths_allow_bbgreek}{true}
 }{}
 
