Declaring new version

--- a/kappak-arguments.tex
+++ b/kappak-arguments.tex
@@ -92,6 +92,10 @@
     \def\@usedVersion{0410}
 }
 
+\DeclareOption{durotan}{
+    \def\@usedVersion{0411}
+}
+
 %% --------------------
 %% Simple
 %% --------------------
