--- a/kappak.sty
+++ b/kappak.sty
@@ -105,7 +105,7 @@
 \def\@encoding          {utf8}
 \def\@fontSet           {normal}
 \def\@headerFooterStyle {normal}
-\def\@langage           {french}
+\def\@language          {english}
 \def\@margins           {normal}
 \def\@scriptStyle       {normal}
 \def\@titlePageStyle    {normal}
