--- a/kappak.sty
+++ b/kappak.sty
@@ -80,8 +80,6 @@
 \newboolean{@b_maths_use_misc}              \setboolean{@b_maths_use_misc}              {false}
 % opertor definitions
 \newboolean{@b_maths_use_operators}         \setboolean{@b_maths_use_operators}         {false}
-% script style for categories
-\newboolean{@b_maths_use_scriptcategories}  \setboolean{@b_maths_use_scriptcategories}  {false}
 % theorem environment definition
 \newboolean{@b_maths_use_theoremEnvs}       \setboolean{@b_maths_use_theoremEnvs}       {false}
 % styles inside theorem envs, e.g. italic for theorems, roman for definitions, ...
@@ -107,6 +105,7 @@
 \def\@margins           {normal}
 \def\@scriptStyle       {normal}
 \def\@titlePageStyle    {normal}
+\def\@categoryStyle     {script}
 
 %% ----------------------------------------
 %%
