--- a/kappak-tikz.tex
+++ b/kappak-tikz.tex
@@ -474,7 +474,7 @@
 %% Equalizer
 %% --------------------
     
-    \newcommand{\eqdiagram}[9]{
+    \newcommand{\eqdiagram}[6]{
         \begin{tikzpicture}[inline/.style = {fill = white, inner sep = 2.5pt}]
             \matrix (m) [matrix of math nodes,
                     row sep = \@tRowsep em,
@@ -483,14 +483,11 @@
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
                 {}#1 \& {}#2 \& {}#3 \\
-                {}#4 \& \& \\
             };
             \path[-stealth]
-                (m-1-1)                    edge          node [above] {$#5$} (m-1-2)
-                ($(m-1-2.east) + (0,0.1)$) edge          node [above] {$#6$} ($(m-1-3.west) + (0,0.1)$)
-                ($(m-1-2.east) - (0,0.1)$) edge          node [below] {$#7$} ($(m-1-3.west) - (0,0.1)$)
-                (m-2-1)                    edge [dashed] node [left]  {$#8$} (m-1-1)
-                (m-2-1)                    edge          node [below] {$#9$} (m-1-2);
+                (m-1-1)                    edge          node [above] {$#4$} (m-1-2)
+                ($(m-1-2.east) + (0,0.1)$) edge          node [above] {$#5$} ($(m-1-3.west) + (0,0.1)$)
+                ($(m-1-2.east) - (0,0.1)$) edge          node [below] {$#6$} ($(m-1-3.west) - (0,0.1)$);
         \end{tikzpicture}
     }
     
@@ -498,7 +495,7 @@
 %% Coequalizer
 %% --------------------
     
-    \newcommand{\coeqdiagram}[9]{
+    \newcommand{\coeqdiagram}[6]{
         \begin{tikzpicture}[inline/.style = {fill = white, inner sep = 2.5pt}]
             \matrix (m) [matrix of math nodes,
                     row sep = \@tRowsep em,
@@ -507,14 +504,11 @@
                     text depth = 0.25ex,
                     ampersand replacement = \&] {
                 {}#1 \& {}#2 \& {}#3 \\
-                \& \& {}#4 \\
             };
             \path[-stealth]
-                ($(m-1-1.east) + (0,0.1)$) edge          node [above] {$#5$} ($(m-1-2.west) + (0,0.1)$)
-                ($(m-1-1.east) - (0,0.1)$) edge          node [below] {$#6$} ($(m-1-2.west) - (0,0.1)$)
-                (m-1-2)                    edge          node [above] {$#7$} (m-1-3)
-                (m-1-2)                    edge          node [below] {$#8$} (m-2-3)
-                (m-1-3)                    edge [dashed] node [right] {$#9$} (m-2-3);
+                ($(m-1-1.east) + (0,0.1)$) edge          node [above] {$#4$} ($(m-1-2.west) + (0,0.1)$)
+                ($(m-1-1.east) - (0,0.1)$) edge          node [below] {$#5$} ($(m-1-2.west) - (0,0.1)$)
+                (m-1-2)                    edge          node [above] {$#6$} (m-1-3);
         \end{tikzpicture}
     }
     
